--- a/2023-24/producao_docs_tecnicos/ficha 1/capitulos/preambulo.tex
+++ b/2023-24/producao_docs_tecnicos/ficha 1/capitulos/preambulo.tex
@@ -1,4 +1,4 @@
-vvvvvvvvvvvvvvvv\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{article}
 \title{A vida do Suricata}
 \author{Jo~ao Ant ́onio-dos-Santos}
 \date {1 de Maio de 1594}
