falta ref do pdt

--- a/2023-24/producao_docs_tecnicos/trabalhopdt/Document.tex
+++ b/2023-24/producao_docs_tecnicos/trabalhopdt/Document.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[portuguese]{babel}
+%\usepackage[portuguese]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -41,6 +41,7 @@ Como indicado no website {\bfseries https://www.healthcare.gov/why-coverage-is-i
 \begin{quotation}
 "No one plans to get sick or hurt, but most people need medical care at some point. Health insurance covers these costs and offers many other important benefits."
 \end{quotation}
+
 \begin{table}[h]
 	\centering
 	\caption{Vantagens e Desvantagens de seguro de saúde}
@@ -54,30 +55,14 @@ Como indicado no website {\bfseries https://www.healthcare.gov/why-coverage-is-i
 	\hline	
 	Tempo de espera  & Franquia\\
 	\hline
-	
-	
 	\end{tabular}
 \end{table}
 \newpage
 
 \section{Caso de Estudo}
 \begin{quote}
-"Toda a pessoa tem direito a um nível de vida suficiente para lhe assegurar e à sua família a saúde e o bem-estar, principalmente quanto à alimentação, ao vestuário, ao alojamento, à assistência médica e ainda quanto aos serviços sociais necessários”. (Declaração Universal dos Direitos Humanos)
-
-A assistência à saúde é um direito de todos e um dever do Estado. Em Portugal, existe um seguro de saúde universal, o Serviço Nacional de Saúde ou SNS de que todas as pessoas podem usufruir. Este sistema de saúde público é tendencialmente gratuito e todas as pessoas usufruem nas mesmas condições.
-
-No entanto, devido à dificuldade do Estado em atender todas as solicitações, este permite que a iniciativa privada crie uma prestação de serviços médicos e hospitalares como forma de assistência suplementar. Assim, surgem os Seguros de Saúde.
-
-O senhor Nelson pretende adquirir um seguro de saúde para o seu agregado familiar.
-
-Descolou-se para isso a uma Companhia de Seguros que lhe propôs três seguros.
-
-Para completar a tabela abaixo, terá de utilizar o seu número de aluno.
-
-Para exemplo vamos usar o número de aluno 61810."
+A Declaração Universal dos Direitos Humanos garante saúde e um nível de vida adequado. Em Portugal, o SNS é universal e frequentemente gratuito. Devido à demanda, a iniciativa privada oferece seguros de saúde. Nelson avalia três propostas de uma Companhia de Seguros, a serem registradas na tabela (exemplo: 61810).
 \end{quote}
-
-
 
 \begin{table}[!ht]
     \centering
@@ -90,6 +75,7 @@ Para exemplo vamos usar o número de aluno 61810."
         Atos médicos oferecidos com a anuidade & 10 & 15 & 20 \\ \hline
 
     \end{tabular}
+	\caption{Tabela de preços dos tres tipos de seguros}
 	
 \end{table}
 
@@ -109,13 +95,28 @@ Para exemplo vamos usar o número de aluno 61810."
         80 & 574 & 273 & 600 \\ \hline
         90 & 656 & 315 & 700  \\ \hline
     \end{tabular}
+	\caption{Comparação dos precos em relação ao numero de atos médicos}
 \end{table}
 
-\scalebox{1}{\includegraphics{graph}}
-
-\section{Conclusão}
+\begin{figure}[!ht]
+	\scalebox{1}{\includegraphics{graph}}
+	\caption{Comparação de seguros de saude}
+\end{figure}
 
 \newpage
+\section{Conclusão}
+
+Após analisar as propostas dos seguros de saúde (A, B, C) para o senhor Nelson, algumas conclusões podem ser destacadas:
+
+1. \textbf{Custo vs. Benefício:} O Seguro B apresenta a menor anuidade e tarifas de atos médicos, tornando-o uma opção mais acessível.
+
+2. \textbf{Cobertura de Atos Médicos:} O Seguro C oferece uma ampla cobertura de atos médicos, especialmente para valores mais altos. Isso pode ser vantajoso para quem espera precisar de cuidados médicos frequentes.
+
+3. \textbf{Liberdade de Escolha:} Todos os seguros oferecem liberdade de escolha, mas o Seguro C pode ser mais atrativo devido à sua cobertura abrangente.
+
+4. \textbf{Ponderação Pessoal:} A escolha entre os seguros deve ser baseada nas necessidades específicas do senhor Nelson e sua família. Se a prevenção e a cobertura abrangente são prioridades, o Seguro C pode ser a melhor opção. Se a preocupação principal é o custo, o Seguro B pode ser mais adequado.
+
+Em última análise, a decisão deve refletir as prioridades pessoais e a situação financeira. Recomenda-se que o senhor Nelson escolha o seguro C se pensa que nao vai precisar mais do 20 atos médicos anuais caso contrario deve escolher o seguro B que é mais barato relativamente.
 
 \section{Bibliografia}
 
